<resources>
    <string name="app_name">IM Delivery</string>
    <string name="hint_mobile">Mobile No</string>
    <string name="hint_login_password">Password</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_button_login">Login</string>
    <string name="login_header_name">IM Delivery</string>
    <string name="delivery_management_title">Delivery Management System</string>
    <string name="error_rest_timeout">Your request is timed out.</string>
    <string name="error_rest_network">No internet connection</string>
    <string name="error_rest_unexpected">Something went wrong</string>
    <string name="copyright_msg">&#169; Copyright 2020,  Ingram Micro Inc. All Rights Reserved.</string>
    <string name="msg_forgot_password">Forgot your password?</string>
    <string name="hint_enter_mobile_no">Enter Mobile No</string>
    <string name="action_submit">Submit</string>
    <string name="error_contact_not_valid">Contact number is not valid</string>
    <string name="error_required">This field is required</string>
    <string name="error_password_not_valid">Password not valid</string>
    <string name="text_invoice_no">Invoice No.</string>
    <string name="text_name">Name</string>
    <string name="text_delivery_address">Delivery Address</string>
    <string name="action_call">Call</string>
    <string name="action_view_map">View Map</string>
    <string name="title_active_jobs">Active Jobs</string>
    <string name="search_hint">Search Jobs</string>
    <string name="action_pending">Pending</string>
    <string name="action_completed">Completed</string>
    <string name="action_all">All</string>
    <string name="hint_email_id">Email id</string>
    <string name="hint_remarks">Remarks</string>
    <string name="hint_delivery_notes">Delivery Notes</string>
    <string name="msg_customer_signature">Sign here to confirm delivery</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="title_job_info">1. Job Info</string>
    <string name="title_job_status">2. Job Status</string>
    <string name="title_customer_signature">3. Customer Signature</string>
</resources>
