<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.ingrammicro.imdelivery.tasks.viewmodel.JobDetailsViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextField.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/text_invoice_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_invoice_no"
                style="@style/TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textNoSuggestions"
                android:text="@={viewModel.jobDetailsForm.field.invoiceNo}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextField.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/text_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_name"
                style="@style/TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextField.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_email_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                style="@style/TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextField.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_contact_no"
                style="@style/TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextField.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/text_delivery_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/delivery_address"
                style="@style/TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</layout>