<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activation.fragment.CustomerDetailsFragment">

    <data>

        <import type="android.view.View"/>


        <variable
            name="viewModel"
            type="com.ingrammicro.imdelivery.tasks.viewmodel.JobDetailsViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include
                android:id="@+id/toolbar_main"
                layout="@layout/toolbar_main"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp">


                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()-> viewModel.onJobInfoClick()}"
                            android:text="@string/title_job_info"/>

                        <net.cachapa.expandablelayout.ExpandableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            bind:toggle="@{viewModel.jobInfoClick}">

                            <include
                                android:id="@+id/customer_info"
                                layout="@layout/content_job_info"
                                bind:viewModel="@{viewModel}"/>

                        </net.cachapa.expandablelayout.ExpandableLayout>

                        <TextView
                            style="@style/TitleBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_job_status"
                            android:onClick="@{()-> viewModel.onJobStatusClick()}"
                            android:layout_marginTop="16dp"/>

                        <net.cachapa.expandablelayout.ExpandableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            bind:toggle="@{viewModel.jobStatusClick}">

                            <include
                                android:id="@+id/job_status"
                                layout="@layout/content_job_status"
                                bind:viewModel="@{viewModel}"/>

                        </net.cachapa.expandablelayout.ExpandableLayout>

                        <TextView
                            style="@style/TitleBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_customer_signature"
                            android:onClick="@{()-> viewModel.onCustomerSignClick()}"
                            android:layout_marginTop="16dp"/>
                        <net.cachapa.expandablelayout.ExpandableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            bind:toggle="@{viewModel.customerSignatureClick}">

                            <include

                                android:id="@+id/include_customer_sign"
                                layout="@layout/content_customer_signature"
                                bind:viewModel="@{viewModel}"/>

                        </net.cachapa.expandablelayout.ExpandableLayout>



                    </LinearLayout>
                </ScrollView>

                <com.google.android.material.button.MaterialButton
                    style="@style/login_button"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/mark_complete" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:visibility="@{viewModel.isLoading()? View.VISIBLE:View.GONE}"
            android:focusable="true">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>