<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <import
            alias="v"
            type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ingrammicro.imdelivery.account.viewmodel.ForgotPasswordViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.ForgotPasswordFragment"
        android:background="@color/transparent_color"
        android:padding="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding_right"
        android:paddingLeft="@dimen/layout_padding_left">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_height"
            android:layout_gravity="center"
            android:background="@drawable/forgot_password_bg">

            <ImageView
                android:id="@+id/close_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                app:srcCompat="@drawable/ic_close_black_24dp"
                android:tint="@color/colorWhite"
                android:layout_alignParentRight="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_forgot_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_enter_mobile_no"
                        android:theme="@style/InputTextAppearance"
                        app:errorTextAppearance="@style/ErrorInputText"
                        app:hintTextAppearance="@style/HintInputText">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/TextField.White"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.contactNo}"
                            android:theme="@style/AppTheme.EditText"
                            app:hintTextAppearance="@color/colorWhite" />

                    </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            style="@style/WhiteButton"
                            android:id="@+id/submit_button"
                            android:layout_alignParentBottom="true"
                            android:layout_width="150dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:visibility="@{viewModel.isLoading?v.GONE:v.VISIBLE}"
                            android:text="@string/action_submit"/>

                    <ProgressBar
                        android:id="@+id/progress_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:indeterminateTint="@color/colorWhite"
                        android:visibility="@{viewModel.isLoading?v.VISIBLE:v.GONE}"
                        />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>


    </FrameLayout>

</layout>