<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>

        <import
            alias="v"
            type="android.view.View" />


        <variable
            name="viewModel"
            type="com.ingrammicro.imdelivery.account.viewmodel.LoginViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login"
    tools:context=".ui.login.fragment.LoginFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollViewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/relativeLayoutLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_TitleLogo"
                        android:layout_width="223dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="40dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_logo_blue_big_3x"/>

                    <ImageView
                        android:id="@+id/app_name"
                        android:layout_below="@id/image_TitleLogo"
                        style="@style/title_text"
                        android:src="@drawable/imdeliverylogo"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.6"
                    android:orientation="vertical">
<!--                    <TextView-->
<!--                        android:id="@+id/header_two"-->
<!--                        android:text="@string/delivery_management_title"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:textSize="@dimen/sp14"-->
<!--                        android:layout_height="wrap_content"/>-->


                    <LinearLayout
                        android:id="@+id/linearLayoutLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/username_textinput_layout"
                            android:layout_width="match_parent"
                            style="@style/TextField.Hint.login"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:padding="@dimen/dp3"
                            android:layout_marginBottom="@dimen/dp3"
                            android:hint="@string/hint_mobile"
                            app:errorText="@{viewModel.loginForm.loginError.mobileNo}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_text"
                                style="@style/TextField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:imeActionLabel="@string/hint_mobile"
                                android:inputType="textEmailAddress|textNoSuggestions"
                                android:maxLines="1"
                                android:text="@={viewModel.loginForm.contactNo}"
                                android:textSize="@dimen/sp20" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/otpTextInputLayout"
                            android:layout_width="match_parent"
                            style="@style/TextField.Hint.login"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:padding="@dimen/dp3"
                            android:hint="@string/hint_login_password"
                            app:errorText="@{viewModel.loginForm.loginError.password}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/otp"
                                android:textSize="@dimen/sp20"
                                style="@style/TextField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:text="@={viewModel.loginForm.passwordText}"
                                android:maxLines="1"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/textview_forgotPwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/forgotpassword"
                            android:padding="10dp"
                            android:text="@string/action_forgot_password"
                            android:layout_gravity="end"/>

                        <RelativeLayout
                            android:id="@+id/relativeLayoutLoginButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="35dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginRight="2dp">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/loginbutton"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                style="@style/login_button"
                                android:clickable="true"
                                android:gravity="center"
                                android:text="@string/action_button_login"
                                android:onClick="@{() -> viewModel.onLoginClick()"
                                android:visibility="@{viewModel.isLoading()? v.GONE:v.VISIBLE}"
                                android:layout_centerInParent="true"
                                android:focusable="true"/>
                            <ProgressBar
                                android:id="@+id/progress_submit"
                                android:layout_below="@id/loginbutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="@{viewModel.isLoading()? v.VISIBLE:v.GONE}"
                                android:gravity="center"
                                android:layout_centerHorizontal="true"/>

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/copyright_msg"/>
                    <TextView
                        android:id="@+id/text_Version"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="v0.0.1"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>
</layout>
